fixed image overflow

--- a/EcommerceWebApp/wwwroot/css/site.css
+++ b/EcommerceWebApp/wwwroot/css/site.css
@@ -65,3 +65,24 @@ input[type=number]::-webkit-outer-spin-button {
     max-height: 200px;
     overflow-y: auto;
 }
+
+.image-wrapper {
+    height: 10rem !important;
+    width: 100% !important;
+    overflow: hidden;
+}
+
+.img-thumbnail-cus {
+    width: 100% !important;
+}
+
+.truncate {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.description-wrapper {
+    height: 75px;
+}
